--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "d3-shape": "^1.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-faux-dom": "^3.1.0"
+    "react-faux-dom": "^3.1.0",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
