--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^15.4.2",
     "react-faux-dom": "^3.1.0",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
